# webcli

./: .coveragerc  .gitignore  LICENSE  README-dev.md  README.md  build.sh  package-lock.json  pyproject.toml  webcli2.html
documents/: action_handlers.md  code.md  coding_style.md  dev-practices.md  getting-started.md  high-level-design.md  login.md
documents/devguide/: README.md  components.md
documents/howtos/: README.md  ai-agent.md  print-image.md  python.md
src/webcli/: __init__.py  main.py
src/webcli/models/: main.py
src/webcli2/: __init__.py  ai_agent.py  apilog.py  config.py  exceptions.py  main.py  main.py.deprecated  service_loader.py  webcli_engine.py
src/webcli2/action_handlers/: BaseActionHandler.jsx  ConfigActionHandler.jsx  README.md  __init__.py  action_handler.py
src/webcli2/action_handlers/config/: __init__.py  main.py
src/webcli2/action_handlers/mermaid/: MermaidActionHandler.js  __init__.py  main.py
src/webcli2/action_handlers/openai/: README.md  __init__.py  main.py
src/webcli2/action_handlers/pyspark/: CLIActionHandler.jsx  __init__.py  main.py
src/webcli2/action_handlers/spark/: CLIActionHandler.jsx  __init__.py  main.py
src/webcli2/action_handlers/system/: __init__.py  main.py
src/webcli2/cli/: __init__.py  main.py  main_internal.py
src/webcli2/db_models/: __init__.py  _common.py  db_action.py  db_action_handler_configuration.py  db_action_response_chunk.py  db_thread.py  db_thread_action.py  db_user.py  main.py
src/webcli2/demo/: confluence_expert.py  html_table_generator.py  jira_expert.py
src/webcli2/javascripts/: ConfigActionHandler.js  MermaidActionHandler.js  PySparkActionHandler.jsx  webcli_client.js
src/webcli2/models/: __init__.py  _common.py  action.py  action_handler_configuration.py  action_response_chunk.py  apis.py  jwt_token_payload.py  main.py  thread.py  thread_action.py  user.py
src/webcli2/web/: README.md  main.py  package-lock.json  package.json  webpack.config.js
src/webcli2/webcli/: __init__.py  main.py  output.py
src/webcli2/websocket/: README.md  __init__.py  main.py
testapp/: .babelrc  .gitignore  README.md  client.md  main.py  package-lock.json  package.json  requirements.txt  webpack.config.js  webpackage.js
testapp/javascripts/: admin.js  app.jsx  index.js
testapp/javascripts/App/: App.css  App.jsx  App.scss
testapp/javascripts/tools/: ConfigActionHandler.js  MermaidActionHandler.js  webcli_client.js
testapp/templates/: index.html  test.html
tests/: README.md  pytest.ini  requirements.txt  test_create_async_action.py
tests/core/data/: test_data_accessor.py
tests/core/service/: test_notifications.py  test_webcli_service.py
(+73 files in other folders)
