[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "webcli2"
version = "0.0.2"
authors = [
  { name="Stone Zhong", email="stone.zhong@gmail.com" },
]
description = "Tool to build CLI like web application"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "SQLAlchemy",
    "pydantic"
]

[project.urls]
Homepage = "https://github.com/stonezhong/webcli"
Issues = "https://github.com/stonezhong/webcli/issues"